fix: Adjust spacing in unordered lists and update BackToTop component usage in multiple pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -231,6 +231,10 @@
     @apply no-underline text-foreground cursor-default;
   }
 
+  h5 a {
+    @apply text-secondary font-semibold;
+  }
+
   #table-of-contents a {
     @apply mt-8 mb-4 text-2xl font-semibold text-primary;
   }
